oec/static/css/styles.embed.css
/***********/
/* General */
/***********/
body {
  background-attachment: none;
  background: transparent;
  overflow: hidden;
}
#app {
  float: left;
}

/***********/
/* Loading */
/***********/
div#loading {
  height: 100%;
  position: relative;
  width: 100%;
}

div#loading > h2 {
  display: block;
  letter-spacing: 1px;
  margin-top: -16px;
  opacity: 0.25;
  position: absolute;
  text-align: center;
  top: 50%;
  width: 100%;
  -webkit-animation: pulse 1s infinite;
}

@-webkit-keyframes pulse
{
  0%  { opacity: 0.25; }
  50% { opacity: 1; }
  100%{ opacity: 0.25; }
}

/*******/
/* Viz */
/*******/
#app #viz{
  display: none;
}

/**************/
/* Data Table */
/**************/
#app #text{
  display: none;
}
#app #text{
  overflow-y: scroll;
/*  position: absolute;
  z-index: -1;*/
}
#app #text h2#total {
  text-align:center;
}
#app #text ol {
/*  list-style-type: decimal;*/
  margin: 0 0 0 40px;
}
#app #text table{
  width: 100%;
}
#app #text table tr.odd{
  background: #eee;
}
#app #text table td,
#app #text table th{
  padding: 2px 6px;
  vertical-align: top;
}
#app #text table th {
  text-align: left;
}
#app #text table th:nth-child(1),
#app #text table td:nth-child(1){
  width: 20px;
}
#app #text table th:nth-child(2),
#app #text table td:nth-child(2){
  width: 40px;
}
.rtl #app #text table th:nth-child(3),
.rtl #app #text table td:nth-child(3){
  text-align: right;
}
#app #text table td:nth-child(4){
  width: 75px;
  text-align: right;
}
#app #text table td:nth-child(5){
  width: 40px;
  text-align: right;
}
#app #text table th:nth-child(5),
#app #text table td:nth-child(5){
  min-width: 35px;
}
#app #text table tbody tr:nth-child(even) {
  background: white;
}
#app #text table tbody tr:nth-child(odd) {
  background: #F4F5F7;
}

/******/
/* UI */
/******/
#app #ui {
/*  border: red 1px solid;*/
/*  display: none;*/
/*  height: 40px;*/
  text-align: center;
  visibility: hidden;
}
#app #timeline,
#app #depth,
#app #color,
#app #more_years {
  display: inline-block;
}
#app #timeline button {
  font-size: 15px;
  margin: 4px auto;
}

#more_years {
  height: 40px;
  text-align: center;
}

/************/
/* Controls */
/************/
#controls {
  display: block;
  font-size:90%;
  right: 0px;
  margin: 20px 0 0 0;
  position: absolute;
  visibility: hidden;
  width: 200px;
}
#controls #show_hide {
  cursor: pointer;
  left: -22px;
  position: absolute;
  top: -23px;
  z-index: 999;
}
#controls #show_hide i{
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;
  -o-transition: 0.5s ease;
  -ms-transition: 0.5s ease;
  transition: 0.5s ease;
}
#controls > * {
  padding: 5px 10px;
}
#controls h3 {
  font-weight: normal;
  margin: 0 0 2px 0;
}
#controls .dropdown_container {
  clear: both;
}
#controls button {
  font-size: 12px;
  margin: 10px;
  padding: 5px;
  width: 180px;
}
#controls hr {
  background: #cccccc;
  clear: both;
  margin: 12px 0;
  height: 0.5px;
}
#controls .control_container {
  margin: 10px 0;
}
#controls .control_container a {
  margin: 0 5px 0 0;
}

#controls .control_container h3 {
  font-size: 14px;
  margin: 0;
}
#controls .control_container img {
  width: 10px;
}
#controls input {
  border: solid 1px #ccc;
  font-family: monospace;
  font-size: 12px;
/*  height: 75px;*/
  overflow: hidden;
  width: 160px;
}
#controls #share i {
  display: inline-block;
  font-size: 20px;
  margin: 0 10px 0 0;
}
#controls #short{
  display: none;
}

